switch to minio operator

--- a/Lib/Neon.Kube/Resources/Helm/minio/templates/serviceaccount.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/minio/templates/serviceaccount.yaml
@@ -1,11 +1,7 @@
-{{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "minio.serviceAccountName" . | quote }}
-  namespace: {{ .Release.Namespace | quote }}
+  name: minio-operator
+  namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ template "minio.name" . }}
-    chart: {{ template "minio.chart" . }}
-    release: "{{ .Release.Name }}"
-{{- end -}}
+{{ include "minio-operator.labels" . | nindent 4 }}
