--- a/Lib/Neon.Kube/Resources/Helm/minio/Chart.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/minio/Chart.yaml
@@ -1,16 +1,17 @@
-apiVersion: v1
-description: High Performance, Kubernetes Native Object Storage
-name: minio
-version: 8.0.9
-appVersion: master
+apiVersion: v2
+appVersion: v4.1.2
+description: A Helm chart for MinIO Operator
+home: https://min.io
+icon: https://min.io/resources/img/logo/MINIO_wordmark.png
 keywords:
 - storage
 - object-storage
 - S3
-home: https://min.io
-icon: https://min.io/resources/img/logo/MINIO_wordmark.png
-sources:
-- https://github.com/minio/minio
 maintainers:
-- name: MinIO, Inc
-  email: dev@minio.io
+- email: dev@minio.io
+  name: MinIO, Inc
+name: minio-operator
+sources:
+- https://github.com/minio/operator
+type: application
+version: 4.1.6
