[test]: test explorer fixes:
Restore: GenerateTargetFrameworkAttribute = TRUE
Remove: DotNetCliToolReference
Tweak: xunit related package references

--- a/Images/Images.csproj
+++ b/Images/Images.csproj
@@ -6,7 +6,7 @@
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
+    <GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
   <ItemGroup>
