--- a/Test/Test.Neon.Deployment/Test.Neon.Deployment.csproj
+++ b/Test/Test.Neon.Deployment/Test.Neon.Deployment.csproj
@@ -10,7 +10,7 @@
     <IsPackable>false</IsPackable>
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
+    <GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
