--- a/Lib/Neon.Xunit.Temporal/Neon.Xunit.Temporal.csproj
+++ b/Lib/Neon.Xunit.Temporal/Neon.Xunit.Temporal.csproj
@@ -26,7 +26,7 @@
     <PackageIcon>nuget-icon.png</PackageIcon>
     <PackageTags>xunit temporal workflow agent</PackageTags>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
+    <GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
