--- a/Services/test-api/test-api.csproj
+++ b/Services/test-api/test-api.csproj
@@ -7,7 +7,7 @@
     <LangVersion>latest</LangVersion>
     <RootNamespace>TestApiService</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
+    <GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
   <ItemGroup>
