--- a/Test/Test.Neon.Service/Test.Neon.Service.csproj
+++ b/Test/Test.Neon.Service/Test.Neon.Service.csproj
@@ -7,7 +7,7 @@
     <RootNamespace>TestNeonService</RootNamespace>
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
+    <GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
